--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t hayaten0415/DockerPractice-React- -f Dockerfile.dev .
+  - sudo docker build -t hayaten0415/DockerPractice-React- -f Dockerfile.dev .
 
 script:
-  - docker run hayaten0415/DockerPractice-React- npm run test -- --coverage
+  - sudo docker run hayaten0415/DockerPractice-React- npm run test -- --coverage
