--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t "hayaten0415/DockerPractice-React-" -f Dockerfile.dev .
+  - docker build -t hayaten0415/DockerPractice -f Dockerfile.dev .
 
 script:
-  - docker run "hayaten0415/DockerPractice-React-" npm run test -- --coverage
+  - docker run hayaten0415/DockerPractice npm run test -- --coverage
